# Fastapi_marketplace_parser

./: .gitignore  README.md
backend/: alembic.ini  db.py  main.py  models.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 3da166decc20_goods_table_creation.py
infra/: docker-compose.yml
